--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+  h1= title 
+  p Bem vindo a #[em Rota das Fábulas], um website de biblioteca desenvolvido em Express.
 
-  h1 Dynamic content
+  h1 Sumário:
 
-  p The library has the following record counts:
+  p Acervo da biblioteca!
 
   ul
-    li #[strong Books:] !{book_count}
-    li #[strong Copies:] !{book_instance_count}
-    li #[strong Copies available:] !{book_instance_available_count}
-    li #[strong Authors:] !{author_count}
-    li #[strong Genres:] !{genre_count}
+    li #[strong Livros:] !{book_count}
+    li #[strong Cópias:] !{book_instance_count}
+    li #[strong Cópias disponíveis:] !{book_instance_available_count}
+    li #[strong Autores:] !{author_count}
+    li #[strong Gêneros:] !{genre_count} 
