--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,23 +17,23 @@ html(lang='en')
               li
                 a(href='/catalog') Home
               li
-                a(href='/catalog/books') All books
+                a(href='/catalog/books') Todos os livros
               li
-                a(href='/catalog/authors') All authors
+                a(href='/catalog/authors') Todos os autores
               li
-                a(href='/catalog/genres') All genres
+                a(href='/catalog/genres') Todos os gêneros
               li
-                a(href='/catalog/bookinstances') All book-instances
+                a(href='/catalog/bookinstances') Todas as cópias de livro
               li
                 hr
               li
-                a(href='/catalog/author/create') Create new author
+                a(href='/catalog/author/create') Criar novo autor
               li
-                a(href='/catalog/genre/create') Create new genre
+                a(href='/catalog/genre/create') Criar novo gênero
               li
-                a(href='/catalog/book/create') Create new book
+                a(href='/catalog/book/create') Criar novo livro
               li
-                a(href='/catalog/bookinstance/create') Create new book instance (copy)
+                a(href='/catalog/bookinstance/create') Criar uma nova cópia do livro
 
         div(class='col-sm-10')
           block content
